# logue-sdk-rust

./: .gitignore  Cargo.toml  build-minilogue-xd.sh  build-wasm.sh  build.rs  flake.nix  test-template.html
.cargo/: config
extract_lut/: Cargo.toml  extract.sh
extract_lut/src/: main.rs
ld/: userosc.ld
logue_sdk/: Cargo.toml
logue_sdk/ld/: osc_api.c
logue_sdk/src/: dsp.rs  lib.rs  lut.rs  oscapi.rs
logue_sdk/src/dsp/: biquad.rs
logue_sdk/src/oscapi/: logue_interface.rs  wasm_interface.rs
logue_sdk_build/: Cargo.toml
logue_sdk_build/ld/: osc_api.c  osc_api.ld
logue_sdk_build/src/: lib.rs
minimodem/: default.nix
modem/: .gitignore  Cargo.toml  build-minilogue-xd.sh  build-wasm.sh  build.rs  manifest.json  test.html
modem/src/: lib.rs
noise/: .gitignore  Cargo.toml  build-minilogue-xd.sh  build-wasm.sh  build.rs  build.sh  manifest.json  test.html
noise/src/: lib.rs  main.rs
src/: main.rs  oscapi.rs
waves/: Cargo.toml
waves/src/: main.rs
